# CPP-Units-Conversion

./: AccelerationType.cpp  AccelerationType.h  AngleType.cpp  AngleType.h  AngularAccelerationType.cpp  AngularAccelerationType.h  AngularSpeedType.cpp  AngularSpeedType.h  AreaType.cpp  AreaType.h  CMakeLists.txt  CMakeSettings.json  DensityType.cpp  DensityType.h  ForceType.cpp  ForceType.h  LengthType.cpp  LengthType.h  MassType.cpp  MassType.h  PowerType.cpp  PowerType.h  PressureType.cpp  PressureType.h  README.md  SpeedType.cpp  SpeedType.h  TemperatureType.cpp  TemperatureType.h  TimeType.cpp  TimeType.h  UnitBase.h  VolumeType.cpp  VolumeType.h
UnitTest/: CMakeLists.txt  ClassTests.cpp  TestMain.cpp  UsageTests.cpp
UnitTests/: UnitTest.cpp  UnitTest.h
